# coheremix

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: cleanup.py  config.py  main.py  schemas.py
backend/app/analysis/: decode.py  features.py  loudness.py  peak.py  pipeline.py  spatial.py  spectrum.py  waveform.py
backend/app/api/: comparisons.py  demo.py  jobs.py
backend/app/db/: base.py  models.py  repositories.py  types.py
backend/app/jobs/: base.py  inprocess.py
backend/app/storage/: base.py  local.py  r2.py
backend/tests/: conftest.py  test_decode.py  test_features.py  test_loudness.py  test_peak.py  test_spatial.py  test_spectrum.py  test_waveform.py
docs/: deferred-hardening.md  notes.md
docs/superpowers/plans/: 2026-06-12-coheremix-phase-0-foundation.md  2026-06-13-coheremix-phase-1-loudness-audio.md  2026-06-18-coheremix-phase-2-3-frequency-spatial.md
docs/superpowers/specs/: 2026-06-11-coheremix-mix-comparison-design.md  2026-06-29-landing-page-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Icon.tsx  Knob.tsx  Menu.tsx  buttons.tsx
frontend/src/features/analysis/: read.ts
frontend/src/features/audio/: tap.ts  (+2 more)
frontend/src/screens/: Landing.tsx  Library.tsx  Processing.tsx  UploadModal.tsx  Workspace.tsx  useComparison.ts
frontend/src/store/: library.ts  viewState.ts
frontend/src/styles/: tokens.css
frontend/src/types/: payload.ts
(+14 files in other folders)
